# bedrock-function-calling-example

./: 1 - function_calling.ipynb  2 - langgraph.ipynb  3 - rewoo.ipynb  README.md  function_calling.ipynb  langgraph.ipynb  pyproject.toml  rewoo.ipynb
data/: teammates.json
diagrams/: Agentic Workflow.drawio  RAG vs Agents.drawio
