[tool.poetry]
name = "bedrock-function-calling-example"
version = "0.1.0"
description = ""
authors = ["Grey Lovelace <glovelace@sourceallies.com>"]
readme = "README.md"
packages = [
    {include="src"}
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34"
boto3-stubs = {extras = ["essential"], version = "^1.34.99"}
xmltodict = "^0.13.0"
langchain = "^0.3.3"
langchain-aws = "^0.2.2"
langgraph = "^0.2.38"
grandalf = "^0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
isort = "^5.13.2"
autoflake = "^2.3.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

